--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <outputDirectory>C:\Users\Alpha\Desktop\Ayoub\Ayoub's servers\Paper 1.16.5\plugins</outputDirectory>
+                            <finalName>PartyManager</finalName>
                         </configuration>
                     </execution>
                 </executions>
@@ -94,14 +96,15 @@
         </dependency>
         <dependency>
             <groupId>co.aikar</groupId>
-            <artifactId>acf-bukkit</artifactId>
+            <artifactId>acf-paper</artifactId>
             <version>0.5.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>edge-SNAPSHOT</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
